--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Python Developer Portfolio</title>
+    <title>Anusha Muthaluri - Python Developer Portfolio</title>
     <style>
         * {
             margin: 0;
@@ -452,13 +452,21 @@
                     <div class="terminal-dot dot-green"></div>
                 </div>
                 <div class="terminal-content">
-                    <div>
-                        <span class="prompt">$</span>
-                        <span class="command">whoami</span>
-                    </div>
-                    <div class="output">
-                        <h1>Python Developer</h1>
-                        <p class="tagline">Building automation tools & solving real-world problems with code</p>
+                    <div style="display: flex; align-items: center; gap: 30px; margin-bottom: 20px;">
+                        <div class="profile-photo">
+                            <img src="https://media.licdn.com/media/AAYQAQSOAAgAAQAAAAAAAB-zrMZEDXI2T62PSuT6kpB6qg.png" alt="Anusha Muthaluri" style="width: 150px; height: 150px; border-radius: 50%; border: 3px solid #00ff41; object-fit: cover;">
+                        </div>
+                        <div>
+                            <div>
+                                <span class="prompt">$</span>
+                                <span class="command">whoami</span>
+                            </div>
+                            <div class="output">
+                                <h1>Anusha Muthaluri</h1>
+                                <p class="tagline">Python Developer | Full-Stack Enthusiast</p>
+                                <p style="color: #8b949e; margin-top: 10px; font-size: 1rem;">Building automation tools & solving real-world problems with code</p>
+                            </div>
+                        </div>
                     </div>
                     <div style="margin-top: 20px;">
                         <span class="prompt">$</span>
@@ -811,7 +819,7 @@
 
     <footer>
         <div class="container">
-            <p>© 2025 Python Developer Portfolio | Built with HTML, CSS & passion for automation</p>
+            <p>© 2025 Anusha Muthaluri | Python Developer | Built with HTML, CSS & passion for automation</p>
             <div class="footer-links">
                 <a href="#top">Back to Top</a>
                 <a href="https://github.com/amuthaluri" target="_blank">GitHub Profile</a>
